# HeartDiseasePrediction

./: .replit  README.md  app.py  heart_knn.pkl  min_max_scaler.pkl  pyproject.toml  requirements.txt
